tests/baselines/reference/exportDefaultAsyncFunction2.errors.txt
a.ts(1,17): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
asyncawait.ts(2,17): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
c.ts(1,17): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
d.ts(1,17): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
e.ts(1,17): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


==== asyncawait.ts (1 errors) ====
    export function async<T>(...args: any[]): any { }
    export function await(...args: any[]): any { }
                    ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    
==== a.ts (1 errors) ====
    import { async, await } from 'asyncawait';
                    ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    export default async(() => await(Promise.resolve(1)));
    
==== b.ts (0 errors) ====
    export default async () => { return 0; };
    
==== c.ts (1 errors) ====
    import { async, await } from 'asyncawait';
                    ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    export default async<number>();
    
==== d.ts (1 errors) ====
    import { async, await } from 'asyncawait';
                    ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    
    export default async;
    
==== e.ts (1 errors) ====
    import { async, await } from 'asyncawait';
                    ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    
    export default async
    
    export function foo() { }